--- a/annotations.html
+++ b/annotations.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="light">
 
 <head>
   <meta charset="utf-8">
@@ -19,15 +19,18 @@
 </head>
 
 <body>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
+
   <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img src="UGLogo1.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-centre">
-        The Constant Maid by James Shirley
+        <img src="UGLogo2.png" alt="Logo" width="60" height="75" class="d-inline-block align-text-centre">
+        <em>The Constant Maid</em> by James Shirley
       </a>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary p-2">
         <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -49,57 +52,79 @@
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn btn-outline-danger" type="submit">Search</button>
             </form>
           </div>
         </div>
       </nav>
+    </div>
+  </nav>
       <div class="row">
         <div class="col-2">
-          <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
-            <nav class="nav nav-pills flex-column">
-              <a class="nav-link" href="#item-1">Annotations</a>
-              <a class="nav-link" href="#item-2">Annotations 1</a>
-              <a class="nav-link" href="#item-3">Annotations 2</a>
-            </nav>
-          </nav>
-        </div>
-        <div class="col-lg-8 mx-auto p-3 py-md-5">
-          <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
-            <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
-            </a>
-          </header>
-          <main>
-            <h1>Annotations</h1>
-            <h2>Digital Scholarly Edition</h2>
-            <h3>Produced by students of EN6138: Digital Scholarly Editing at University of Galway, 2023</h3>
-            <p class="fs-5 col-md-8">Quickly and easily get started with Bootstrap's compiled, production-ready files
-              with this barebones example featuring some basic HTML and helpful links. Download all our examples to get
-              started.</p>
-
-
-            <hr class="col-3 col-md-2 mb-5">
-
-            <div class="row g-5">
-              <div class="col-md-6">
-                <h2>Project Navigation</h2>
-                <p>Links to some sample pages, and a copy of EVT for this project</p>
-                <ul class="icon-list">
-                  <li><a href="about.html">About the Project</a></li>
-                  <li><a href="edition/">EVT Edition</a></li>
+          <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  <a href="annotations.html" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Annotations</a>
+                </button>
+              </h2>
+              <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body"><ul class="nav flex-column">
+                <ul class="nav flex-column"></ulclass>
+                  <li class="nav-item">
+                    <a class="nav-link active text-danger-emphasis" aria-current="page" href="#annotationkey">Annotation Key</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-danger-emphasis" href="#modernisationguidelines">Modernisation Guidelines</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-danger-emphasis" href="#stagedirections">Stage Directions</a>
+                  </li>
                 </ul>
               </div>
-
-              <div class="col-md-6">
-                <h2>Guides</h2>
-                <p>Read more detailed instructions and documentation on using or contributing to Bootstrap.</p>
-                <ul class="icon-list">
-                  <li><a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Bootstrap quick start
-                      guide</a></li>
-                </ul>
-
               </div>
             </div>
+          </div>
+        </div>
+
+  <div class="col-lg-8 mx-auto p-3 py-md-5">
+    <h1>Annotations</h1>
+            <br>
+            <p><a href="https://www.tei-c.org/release/doc/tei-p5-doc/en/html/index.html" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Access TEI Guidelines Here</a></p> 
+            <br>
+
+              <h3 id="annotationkey">Annotation Key</h3>
+              <p>The notes and commentary offered in this edition of <em>The Constant Maid</em> consider everything from the British Library shelfmark to the last line of the play. Our main goal has been to provide clear, direct and easy to navigate annotations.</p>
+
+              <p>Orange: Etymological</p>
+              <p>Green: Contextual</p>
+              <p>Grey: Intertextual</p>
+              <p>Yellow: Textual</p>
+              <br>
+
+              <p>There are four types of annotations:</p>
+
+              <p><b>Etymological:</b> The major source for the glossarial annotations has been the <em>Oxford English Dictionary</em>. For the expressions and jargon of the period, we have consulted different dictionaries of proverbs, all of which are referenced in the bibliography. In general, we have not provided etymological annotations for words adequately defined in latest editions of dictionaries like <em>Merriam-Webster’s</em> or <em>Cambridge Dictionary</em>, unless we have considered them strictly necessary.</p>
+
+              <p><b>Contextual:</b> We have included explanations about history, politics, buildings, places or objects of the time necessary to understand certain references, dialogue, or jokes.</p>
+
+              <p><b>Intertextual:</b>This work contains multiple references to different songs, plays, and artists, but it especially abounds in classical references. The masque is the best and most relevant example. Therefore, we have provided a detailed explanation of its meaning and interpretations within the text. For some other references, especially biblical ones, we have suggested different possible interpretations.</p>
+
+              <p><b>Textual:</b>We have offered commentary when we have felt it was necessary to clarify the meaning of the text. The references to other plays by Shirley are also considered in this category.</p>
+
+              <p>Although this is not a critical edition, on certain occasions we have felt obliged to record divergences and variations in the text over time. For this reason, we have taken into account some significant changes, as well as the notes provided by the 1833 editor.</p>
+
+<br>
+
+              <h3 id="modernisationguidelines">Modernisation Guidelines</h3>
+              <p>This edition is based on the edition of the play first published in 1640 (STC no.: 22438). We worked with images from EEBO, EEBO-TCP transcriptions, and images from the British Library copy of the play.</p>
+              <p>We have chosen to create this scholarly edition as a documentary style, rather than a critical analysis. A number of changes have been made from the original text of the play in order to fit with the modernisation principles we have created. Spelling was one of the key points of change. Certain words and spellings need to be modernised to improve the flow of the text and make it more accessible to the modern audience. For example, within the text, <em>I</em> and <em>J</em> are used interchangeably. We have standardised this, changing the <em>I</em> to a <em>J</em> whenever used. We have also done the same with changing the <em>V</em> to a <em>U</em>. Similarly, we have taken out the long <em>S</em> popularly used at this time, and replaced it with a standard <em>S</em>, all in accordance with modern standards. Other changes in spelling have been made for consistency within the text.</p>
+              <p>In order to improve the readability of the text for modern audiences, we have also decided to include the full names of the speakers rather than using the abbreviated version seen in the 1640 version of <em>The Constant Maid</em>. For further readability, we have also standardised spacing and punctuation, such as adding an apostrophe and ‘s’ to indicate the genitive case. All other elements of the original play have been retained, except in certain special cases where this would hinder comprehension.</p>
+              
+              <br>
+              <h3 id="stagedirections">Stage Directions</h3>
+              <p>Where needed, we have modified or deleted original stage directions, and added new ones as necessary for the performance of the text. We also included relevant stage directions from the 1833 edition to create more clarity throughout the play. The “Names of the Persons” was also corrected to reflect the number of servants in the play accurately.</p>
+            
           </main>
           <footer class="pt-5 my-5 text-muted border-top">
             University of Galway, 2023
