Index content update 1

--- a/index.html
+++ b/index.html
@@ -61,34 +61,52 @@
         </nav>
   <div class="col-lg-8 mx-auto p-3 py-md-5">
           <main>
-            <h1>The Constant Maid by James Shirley (1833)</h1>
-            <h2>Digital Scholarly Edition</h2>
-            <h3>Produced by students of EN6138: Digital Scholarly Editing at University of Galway, 2023</h3>
-            <p class="fs-5 col-md-8">Quickly and easily get started with Bootstrap's compiled, production-ready files
-              with this barebones example featuring some basic HTML and helpful links. Download all our examples to get
-              started.</p>
+            <h1><em>The Constant Maid (Love Will Find Out the Way)</em> by James Shirley</h1>
+            <h2>A Digital Scholarly Edition</h2>
+            <h4>This edition was completed by the students of EN6138: Digital Scholarly Editing at the University of Galway in April 2023, under the supervision of Dr Lindsay Ann Reid and Dr Justin Tonra.</h4>
+            <p class="fs-5 col-md-8">Insert Introduction here</p>
 
 
             <hr class="col-3 col-md-2 mb-5">
 
             <div class="row g-5">
               <div class="col-md-3">
-                <h2>Project Navigation</h2>
-                <p>Links to some sample pages, and a copy of EVT for this project</p>
-                <ul class="icon-list">
-                  <li><a href="/about.html">About the Project</a></li>
-                  <li><a href="edition/">EVT Edition</a></li>
-                </ul>
+                <h2>Work Package 1: Introductory Materials</h2>
+                <p><em>Team Lead:</em> Nicole Sterba</p>
+                <p>Molly Kelly</p>
+                <p>Vetiver "V" Lawing</p>
+                <p>Tara O'Malley</p>
+                <p>Shelby Salisbury</p>
+                <p>Michaela Shaw</p>
+                <p>Samika Shriyan</p>
               </div>
 
               <div class="col-md-3">
-                <h2>Guides</h2>
-                <p>Read more detailed instructions and documentation on using or contributing to Bootstrap.</p>
-                <ul class="icon-list">
-                  <li><a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">Bootstrap quick start
-                      guide</a></li>
-                </ul>
+                <h2>Work Package 2: Annotation</h2>
+                <p><em>Team Lead:</em> Alicia Calvo Hernández</p>
+                <p>Róisin Cremin</p>
+                <p>Ciara Harris</p>
+                <p>Olivia Long</p>
+                <p>Maria Fernanda Ortega</p>
+              </div>
+            
+              <div class="col-md-3">
+                <h2>Work Package 3: EVT Structural Encoding</h2>
+                <p><em>Team Lead:</em> Alessia Fiorello</p>
+                <p>Kiki Andrews</p>
+                <p>Cassia Blondelot</p>
+                <p>Rachel Cahilly</p>
+                <p>Isabelle Gahan</p>
+                <p>Shannon Kelly</p>
+              </div>
 
+              <div class="col-md-3">
+                <h2>Work Package 4: Website Design, Encoding, & Pubilcation</h2>
+                <p><em>Team Lead:</em> Anna Blackburn</p>
+                <p>Valeria Barbon</p>
+                <p>Sinéad Bartley</p>
+                <p>Mariana Morales</p>
+              </div>
               </div>
             </div>
           </main>
