Add video to index

--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
               </div>
               </div>
             </div>
+
+            <a href="https://www.youtube.com/watch?v=45dPT-wUoiA"><img src="James_Shirley.jpeg" class="img-fluid mx-auto d-block" alt="James Shirley"/></a>
           </main>
           <footer class="pt-5 my-5 text-muted border-top">
             University of Galway, 2023
