--- a/abouttheauthor.html
+++ b/abouttheauthor.html
@@ -68,7 +68,10 @@
               <div class="accordion-body"><ul class="nav flex-column">
               <ul class="nav flex-column"></ulclass>
                 <li class="nav-item">
-                  <a class="nav-link active text-danger-emphasis" aria-current="page" href="#blankverse">Blank Verse</a>
+                  <a class="nav-link active text-danger-emphasis" aria-current="page" href="#biography">Biography</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-danger-emphasis" href="#blankspace">Blank Space</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-danger-emphasis" href="#irishcanon">Irish Canon</a>
@@ -85,8 +88,8 @@
           </header>
           <main>
             <div class="col-lg-8 mx-1 p-3 py-md-5">
-            <div class="pt-5 my-5 text-muted border-top">
               <h1>About the Author</h1>
+              <h3 id="biography">Biography</h3>
               <p>James Shirley was baptised in September 1596 in London. He attended St Catharine’s College, University of Cambridge in 1615, and achieved his BA on 4 April 1617. He married his first wife, Elizabeth Gilmet, in June 1618. He was ordained as a minister in September 1619 and held a position as the master of St. Albans Grammar School, Hertfordshire between 1619 and 1621. He moved with his wife Elizabeth and their children to London in 1624, where he began his career as a playwright.</p>
               <p>In 1625, he began writing for a group that would become known as Queen Henrietta Maria’s Men. His first play, <em>The School of Complement</em>, was performed in the Phoenix in Drury Lane in that same year. He continued to write for Queen Henrietta Maria’s Men until 1636, when he lost his job due to widespread closure of theatres to stop the spread of plague in the city. He then moved to Ireland, at the invitation of Lord Deputy of Ireland Sir Thomas Wentworth, in order to become the playwright for the Werburgh Street Theatre in Dublin.</p>
               <p>Shirley wrote a number of new plays while he was in Dublin, as well as publishing some of his older plays, revisions or otherwise. He also wrote prefaces to plays by other playwrights while in Dublin and revised plays that were to be produced at Werburgh Street Theatre. More about Shirley’s work in Dublin can be found in Irish Canon.</p>
