--- a/abouttheauthor.html
+++ b/abouttheauthor.html
@@ -82,7 +82,7 @@
           </div>
         </div>
       </div>
-        <div class="col-lg-10 mx-auto p-3 py-md-5">
+        <div class="class="col-lg-8 p-3 mx-1 py-md-5">
             <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
             </a>
           </header>
