--- a/abouttheauthor.html
+++ b/abouttheauthor.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>About the Author</title>
+  <title>The Constant Maid - About the Author</title>
   <link rel=”icon” href=”UGLogo2.png” sizes=”16x16” type=”image/png”>
 
   <!-- Bootstrap core CSS -->
