--- a/abouttheauthor.html
+++ b/abouttheauthor.html
@@ -28,7 +28,7 @@
   <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img src="UGLogo2.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-centre">
+        <img src="UGLogo2.png" alt="Logo" width="60" height="75" class="d-inline-block align-text-centre">
         The Constant Maid by James Shirley
       </a>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -53,7 +53,7 @@
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn btn-outline-danger" type="submit">Search</button>
             </form>
           </div>
         </div>
