--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
             <a href="https://www.youtube.com/watch?v=45dPT-wUoiA" target="_blank"><img src="James_Shirley.jpeg" class="img-fluid mx-auto d-block" alt="James Shirley"/></a>
           </main>
-          <footer class="pt-5 my-5 text-muted border-top">
+          <footer class="pt-5 my-5 mx-5 text-muted border-top">
             University of Galway, 2023
           </footer>
         </div>
