--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>The Constant Maid</title>
-  <link rel=”icon” type="image/x-icon" href=”UGLogo2.png”>
+  <title>The Constant Maid 1833</title>
+  <link rel=”icon” type="image/x-icon" href=”/UGLogo2.png”>
 
   <!-- Bootstrap core CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
