--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="">
 
   <title>The Constant Maid</title>
-  <link rel=”icon” type="image/x-icon" href=”/UGLogo2.png?”>
+  <link rel=”icon” type="image/x-icon" href="/UGLogo2.png?">
 
   <!-- Bootstrap core CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -102,7 +102,7 @@
               </div>
 
               <div class="col-md-3">
-                <h4>Work Package 4: Website Design, Encoding, & Pubilcation</h4>
+                <h4>Work Package 4: Website Design, Encoding, & Publication</h4>
                 <p><em>Team Lead:</em> Anna Blackburn</p>
                 <p>Valeria Barbon</p>
                 <p>Sinéad Bartley</p>
