--- a/abouttheauthor.html
+++ b/abouttheauthor.html
@@ -75,7 +75,7 @@
                   <a class="nav-link active text-danger-emphasis" aria-current="page" href="#biography">Biography</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-danger-emphasis" href="#blankspace">Blank Space</a>
+                  <a class="nav-link text-danger-emphasis" href="#blankverse">Blank Verse</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-danger-emphasis" href="#irishcanon">Irish Canon</a>
