--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="">
 
   <title>The Constant Maid</title>
-  <link rel=”icon” type="image/x-icon" href="/UGLogo2.png?">
+  <link rel="icon" type="image/x-icon" href="/UGLogo2.png">
 
   <!-- Bootstrap core CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -65,7 +65,6 @@
             <h1><em>The Constant Maid (Love Will Find Out the Way)</em> by James Shirley</h1>
             <h2>A Digital Scholarly Edition</h2>
             <h4>This edition was completed by the students of EN6138: Digital Scholarly Editing at the University of Galway in April 2023, under the supervision of Dr Lindsay Ann Reid and Dr Justin Tonra.</h4>
-            <p class="fs-5 col-md-8">Insert Introduction here</p>
 
 
             <hr class="col-3 col-md-2 mb-5">
