--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <p><em>Team Lead:</em> Alessia Fiorello</p>
                 <p>Kiki Andrews</p>
                 <p>Cassia Blondelot</p>
-                <p>Rachel Cahilly</p>
+                <p>Rachel Cahill</p>
                 <p>Isabelle Gahan</p>
                 <p>Shannon Kelly</p>
               </div>
